--- a/styles/style.css
+++ b/styles/style.css
@@ -55,6 +55,10 @@ margin-top: 60px;
 margin-right: 0;
 }
 
+.card.bg-transparent {
+    border: none;
+}
+
 @media screen and (max-width: 767px) {
 #header .card{
 display: none;
